--- a/.env.example
+++ b/.env.example
@@ -5,17 +5,17 @@ NODE_ENV=staging
 RCHAT_WEBHOOK_PORT=9091
 
 # ROCKET.CHAT
-ROCKETCHAT_BASE_URL=http://72.14.183.211:3030
-ROCKETCHAT_USER=api.integration
-ROCKETCHAT_PASS="Brasil#2022"
+ROCKETCHAT_BASE_URL=
+ROCKETCHAT_USER=
+ROCKETCHAT_PASS=
 
 # REDIS
 # Conectar na porta padrão do Redis (6379) e o nome do container caso esteja usando Docker
 REDIS_HOST=localhost
-REDIS_PORT=86400
-TTL=0
+REDIS_PORT=6379
+TTL=3600
 
 # BOTPRESS
-BOTPRESS_BASE_URL=http://72.14.183.211:3000
-BOTPRESS_USERNAME=pedro.bezerra@fabrica2s.com.br
-BOTPRESS_PASSWORD=Brasil@2022
+BOTPRESS_BASE_URL=
+BOTPRESS_USERNAME=
+BOTPRESS_PASSWORD=
